# Call_me_maybe

./: Makefile  README.md  pyproject.toml  test.py
data/input/: functions_definition.json
data/output/: function_calling_results.json
src/: __main__.py  cocw_output.json  get_fc_name.py  get_fc_result.py  parssing.py
