[project]
name = "cm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk>=1.0.1",
    "mypy>=1.19.1",
]

[tool.uv.sources]
llm_sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "llm_sdk"
]

[tool.mypy]
python_version = "3.10"
mypy_path = ["llm_sdk"]
